<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/l100011"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2123123"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@xml/shapeborderblack"
            android:text="@string/data" />

        <EditText
            android:id="@+id/txtData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@xml/shapeborderblack"
            android:ems="10"
            android:inputType="datetime" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l1000112312321312312"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView212312dsadqsadasd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@xml/shapeborderblack"
            android:text="@string/desc" />

        <EditText
            android:id="@+id/txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@xml/shapeborderblack"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l1000112312321312312werwerwer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonSalvarHorASX"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@xml/shapebutton"
            android:text="@string/salve"
            android:textColor="#FFFFFF" 
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
        </Button>
    </LinearLayout>

    <ListView
        android:id="@+id/lv1"
        android:layout_width="match_parent"
        android:layout_height="162dp" >
    </ListView>

</LinearLayout>